# rural-credit-model

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: business_data.py  dashboard.py
config/: settings.yaml  sources.yaml
notebooks/: teste.ipynb
paper/: exemplo.bib  projeto.tex  puconline.sty
paper/output/: projeto.bbl
paper/output/secs/: 01-Intro.aux  02-Referencial.aux  03-Revisao.aux  04-Plano.aux  05-Conclusao.aux
paper/secs/: 01-Intro.tex  02-Referencial.tex  03-Revisao.tex  04-Plano.tex  05-Conclusao.tex
scripts/: minio_bootstrap.py
src/features/: build_features.py  build_labels.py  features_sql.py  registry.py  run_features.py  run_labels.py
src/ingestion/: base.py  run_all.py  run_ingestion.py  sicor.py
src/modeling/: consolidate.py  feature_selection.py  metrics.py  models.py  preprocessing.py  run_model.py  run_storage.py  train.py  train_temporal.py
src/transform/: run_transform.py  sicor_treat.py
src/utils/: io.py  logging.py  minio_client.py  orchestration.py
