[tool.poetry]
name = "rural-credit-model"
version = "0.1.0"
description = ""
authors = ["Victor Zucchetti <victorzucchetti2@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^3.0.3"
ipykernel = "^7.3.0"
pyyaml = "^6.0.3"
dotenv = "^0.9.9"
minio = "^7.2.20"
pre-commit = "^4.6.0"
commitizen = "^4.16.3"
httpx = "^0.28.1"
duckdb = "^1.5.4"
pyarrow = "^24.0.0"
fsspec = "^2026.6.0"
numpy = "^2.5.0"
scikit-learn = "^1.9.0"
xgboost = "^3.3.0"
streamlit = "^1.58.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
